# mxusb

./: .gitignore  Makefile  chg.patch  def_ctrl_pipe.cpp  def_ctrl_pipe.h  endpoint_reg.cpp  endpoint_reg.h  ep0.cpp  ep0.h  shared_memory.cpp  shared_memory.h  stm32_usb_regs.h  usb.cpp  usb.h  usb_config.h  usb_gpio.h  usb_impl.cpp  usb_impl.h  usb_tracer.cpp  usb_tracer.h  usb_util.h
_doc/: documentation.dox  index.html
_examples/pc_side/: demo.cpp  libusbwrapper.cpp
_examples/uc_side/: Makefile  Readme.txt  mxusb_demo.cpp  mxusb_serial.cpp
_testsuite/pc_side/: CMakeLists.txt  testsuite.cpp
_testsuite/uc_side/: Makefile  mxusb_testsuite.cpp
config/: usb_config.h  usb_gpio.h
doc/: Doxyfile
examples/pc_side/: CMakeLists.txt  libusbwrapper.h
examples/uc_side/: Makefile
testsuite/uc_side/: Makefile  Readme.txt
